# xc-cup-ranker

./: .envrc  .gitignore  README.md  flake.nix  pyproject.toml
xc_cup_ranker/: events.py  export.py  participants.py  scraper.py
