[project]
name = "xc-cup-ranker"
version = "1.0.0"
description = "A tool to rank XC Cup results"
requires-python = ">=3.10"
dependencies = [
    "selenium>=4.28.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
